--- a/views/drones/list.hbs
+++ b/views/drones/list.hbs
@@ -1,1 +1,12 @@
 <h2>Available drones</h2>
+
+{{#each drones}}
+    <div>
+        <ul>
+            <li>Name: {{this.name}}</li>
+            <li>Propellers: {{this.propellers}}</li>
+            <li>Max speed: {{this.maxSpeed}}</li>
+            <a href="/drones/{{this._id}}/edit">Modify</a>
+        </ul>
+    </div>
+{{/each}}
