--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,6 +1,6 @@
 <header>
-    <nav>
-        <a href="/">Home</a>
+    <nav class="navbar .navbar-expand{-sm|-md|-lg|-xl} navbar-dark bg-dark">
+        <a href="/" class="nav-link">Home</a>
         <a href="/drones">See Drones</a>
         <a href="/drones/create">Create a new drone</a>
     </nav>
