--- a/views/drones/list.hbs
+++ b/views/drones/list.hbs
@@ -1,12 +1,17 @@
+<div id="drones-list-main-container">
+
 <h2>Available drones</h2>
 
 {{#each drones}}
-    <div>
+    <div id="drones-list-individual-container">
         <ul>
             <li>Name: {{this.name}}</li>
             <li>Propellers: {{this.propellers}}</li>
             <li>Max speed: {{this.maxSpeed}}</li>
-            <a href="/drones/{{this._id}}/edit">Modify</a>
+            <a href="/drones/{{this._id}}/edit"><i class="fa fa-pencil" aria-hidden="true"></i></a>
+            <a href="/drones/{{this._id}}/delete"><i class="fa fa-trash" aria-hidden="true"></i></a>
         </ul>
-    </div>
+    </div>  
 {{/each}}
+
+</div>
